[Editorial] match text to Victoria (Act 2); add CSS

--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -16,7 +16,7 @@
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">I</span>
 				</h3>
-				<p>Court of Macbeth’s castle.</p>
+				<p>Court of <b epub:type="z3998:persona">Macbeth’s</b> castle.</p>
 				<table>
 					<tbody>
 						<tr>
@@ -211,7 +211,7 @@
 									<br/>
 									<span>It is the bloody business which informs</span>
 									<br/>
-									<span>Thus to mine eyes. Now o’er the one halfworld</span>
+									<span>Thus to mine eyes. Now o’er the one half-world</span>
 									<br/>
 									<span>Nature seems dead, and wicked dreams abuse</span>
 									<br/>
@@ -221,7 +221,7 @@
 									<br/>
 									<span>Alarum’d by his sentinel, the wolf,</span>
 									<br/>
-									<span>Whose howl’s his watch, thus with his stealthy pace.</span>
+									<span>Whose howl’s his watch, thus with his stealthy pace,</span>
 									<br/>
 									<span>With Tarquin’s ravishing strides, towards his design</span>
 									<br/>
@@ -268,9 +268,7 @@
 								<p>
 									<span>That which hath made them drunk hath made me bold;</span>
 									<br/>
-									<span>What hath quench’d them hath given me fire.</span>
-									<br/>
-									<span>Hark! Peace!</span>
+									<span>What hath quench’d them hath given me fire. Hark! Peace!</span>
 									<br/>
 									<span>It was the owl that shriek’d, the fatal bellman,</span>
 									<br/>
@@ -278,9 +276,7 @@
 									<br/>
 									<span>The doors are open; and the surfeited grooms</span>
 									<br/>
-									<span>Do mock their charge with snores: I have drugg’d</span>
-									<br/>
-									<span>their possets,</span>
+									<span>Do mock their charge with snores: I have drugg’d their possets,</span>
 									<br/>
 									<span>That death and nature do contend about them,</span>
 									<br/>
@@ -374,9 +370,7 @@
 							<td epub:type="z3998:persona">Macbeth</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>There’s one did laugh in’s sleep, and one cried</span>
-									<br/>
-									<span>“Murder!”</span>
+									<span>There’s one did laugh in’s sleep, and one cried “Murder!”</span>
 									<br/>
 									<span>That they did wake each other: I stood and heard them:</span>
 									<br/>
@@ -414,7 +408,7 @@
 								<p>
 									<span>But wherefore could not I pronounce “Amen”?</span>
 									<br/>
-									<span>I had most need of blessing, and “Amen’</span>
+									<span>I had most need of blessing, and “Amen”</span>
 									<br/>
 									<span>Stuck in my throat.</span>
 								</p>
@@ -436,9 +430,9 @@
 								<p>
 									<span>Methought I heard a voice cry “Sleep no more!</span>
 									<br/>
-									<span>Macbeth does murder sleep’, the innocent sleep,</span>
+									<span>Macbeth does murder sleep,” the innocent sleep,</span>
 									<br/>
-									<span>Sleep that knits up the ravell’d sleeve of care,</span>
+									<span>Sleep that knits up the ravell’d sleave of care,</span>
 									<br/>
 									<span>The death of each day’s life, sore labour’s bath,</span>
 									<br/>
@@ -548,7 +542,7 @@
 									<br/>
 									<span>To wear a heart so white. <i epub:type="z3998:stage-direction">Knocking within.</i> I hear a knocking</span>
 									<br/>
-									<span>At the south entry: retire we to our chamber;</span>
+									<span>At the south entry: retire we to our chamber:</span>
 									<br/>
 									<span>A little water clears us of this deed:</span>
 									<br/>
@@ -588,7 +582,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Knocking within. Enter a Porter.</i>
+								<i epub:type="z3998:stage-direction">Knocking within. Enter a <b epub:type="z3998:persona">Porter</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -613,7 +607,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Porter</td>
-							<td>“Faith sir, we were carousing till the second cock: and drink, sir, is a great provoker of three things.</td>
+							<td>’Faith sir, we were carousing till the second cock: and drink, sir, is a great provoker of three things.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macduff</td>
@@ -621,29 +615,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Porter</td>
-							<td epub:type="z3998:verse">
-								<p>
-									<span>Marry, sir, nose-painting, sleep, and</span>
-									<br/>
-									<span>urine. Lechery, sir, it provokes, and unprovokes;</span>
-									<br/>
-									<span>it provokes the desire, but it takes</span>
-									<br/>
-									<span>away the performance: therefore, much drink</span>
-									<br/>
-									<span>may be said to be an equivocator with lechery:</span>
-									<br/>
-									<span>it makes him, and it mars him; it sets</span>
-									<br/>
-									<span>him on, and it takes him off; it persuades him,</span>
-									<br/>
-									<span>and disheartens him; makes him stand to, and</span>
-									<br/>
-									<span>not stand to; in conclusion, equivocates him</span>
-									<br/>
-									<span>in a sleep, and, giving him the lie, leaves him.</span>
-								</p>
-							</td>
+							<td>Marry, sir, nose-painting, sleep, and urine. Lechery, sir, it provokes, and unprovokes; it provokes the desire, but it takes away the performance: therefore, much drink may be said to be an equivocator with lechery: it makes him, and it mars him; it sets him on, and it takes him off; it persuades him, and disheartens him; makes him stand to, and not stand to; in conclusion, equivocates him in a sleep, and, giving him the lie, leaves him.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macduff</td>
@@ -651,7 +623,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Porter</td>
-							<td>That it did, sir, i” the very throat on me: but I requited him for his lie; and, I think, being too strong for him, though he took up my legs sometime, yet I made a shift to cast him.</td>
+							<td>That it did, sir, i’ the very throat on me: but I requited him for his lie; and, I think, being too strong for him, though he took up my legs sometime, yet I made a shift to cast him.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macduff</td>
@@ -787,9 +759,10 @@
 								</p>
 							</td>
 						</tr>
-						<tr>
-							<td epub:type="z3998:persona">Macbeth, Lennox</td>
-							<td>What’s the matter.</td>
+						<tr class="together">
+							<td epub:type="z3998:persona">Macbeth<br/>
+							Lennox</td>
+							<td>What’s the matter?</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macduff</td>
@@ -807,7 +780,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macbeth</td>
-							<td>What is “t you say? the life?</td>
+							<td>What is’t you say? the life?</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Lennox</td>
@@ -883,7 +856,7 @@
 								<p>
 									<span>O Banquo, Banquo,</span>
 									<br/>
-									<span>Our royal master “s murder’d!</span>
+									<span>Our royal master’s murder’d!</span>
 								</p>
 							</td>
 						</tr>
@@ -923,7 +896,7 @@
 									<br/>
 									<span>I had lived a blessed time; for, from this instant,</span>
 									<br/>
-									<span>There “s nothing serious in mortality:</span>
+									<span>There’s nothing serious in mortality:</span>
 									<br/>
 									<span>All is but toys: renown and grace is dead;</span>
 									<br/>
@@ -957,7 +930,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macduff</td>
-							<td>Your royal father “s murder’d.</td>
+							<td>Your royal father’s murder’d.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Malcolm</td>
@@ -967,9 +940,9 @@
 							<td epub:type="z3998:persona">Lennox</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Those of his chamber, as it seem’d, had done “t:</span>
+									<span>Those of his chamber, as it seem’d, had done’t:</span>
 									<br/>
-									<span>Their hands and faces were an badged with blood;</span>
+									<span>Their hands and faces were all badged with blood;</span>
 									<br/>
 									<span>So were their daggers, which unwiped we found</span>
 									<br/>
@@ -1019,7 +992,7 @@
 									<br/>
 									<span>That had a heart to love, and in that heart</span>
 									<br/>
-									<span>Courage to make “s love kno wn?</span>
+									<span>Courage to make’s love kno wn?</span>
 								</p>
 							</td>
 						</tr>
@@ -1045,13 +1018,11 @@
 							<td epub:type="z3998:persona">Donalbain</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside to <b epub:type="z3998:persona">Malcolm</b>.</i> What should be spoken here,</span>
-									<br/>
-									<span>where our fate,</span>
+									<span><i epub:type="z3998:stage-direction">Aside to <b epub:type="z3998:persona">Malcolm</b>.</i> What should be spoken here, where our fate,</span>
 									<br/>
 									<span>Hid in an auger-hole, may rush, and seize us?</span>
 									<br/>
-									<span>Let “s away;</span>
+									<span>Let’s away;</span>
 									<br/>
 									<span>Our tears are not yet brew’d.</span>
 								</p>
@@ -1071,7 +1042,9 @@
 							<td epub:type="z3998:persona">Banquo</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Look to the lady: <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Lady Macbeth</b> is carried out.</i> And when we have our naked frailties hid,</span>
+									<span>Look to the lady: <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Lady Macbeth</b> is carried out.</i></span>
+									<br/>
+									<span>And when we have our naked frailties hid,</span>
 									<br/>
 									<span>That suffer in exposure, let us meet,</span>
 									<br/>
@@ -1101,13 +1074,13 @@
 								<p>
 									<span>Let’s briefly put on manly readiness,</span>
 									<br/>
-									<span>And meet i” the hall together.</span>
+									<span>And meet i’ the hall together.</span>
 								</p>
 							</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">All</td>
-							<td>Well contented. <i epub:type="z3998:stage-direction">Exeunt all but <b epub:type="z3998:persona">Malcolm</b> and <b epub:type="z3998:persona">Donalbain</b>..</i></td>
+							<td>Well contented. <i epub:type="z3998:stage-direction">Exeunt all but <b epub:type="z3998:persona">Malcolm</b> and <b epub:type="z3998:persona">Donalbain</b>.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Malcolm</td>
@@ -1161,7 +1134,7 @@
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">IV</span>
 				</h3>
-				<p>Outside Macbeth’s castle.</p>
+				<p>Outside <b epub:type="z3998:persona">Macbeth’s</b> castle.</p>
 				<table>
 					<tbody>
 						<tr>
