--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,7 +12,7 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo se:color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Macbeth</i><br/>
-			was published in YEAR by<br/>
+			was published in 1606 by<br/>
 			<a href="https://en.wikipedia.org/wiki/William_Shakespeare">William Shakespeare</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
