[Editorial] match text to Victoria (Act 3); adjust lettercase of persona

--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -54,7 +54,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Sennet sounded. Enter <b epub:type="z3998:persona">Macbeth</b>, as king, <b epub:type="z3998:persona">Lady Macbeth</b>, as queen, <b epub:type="z3998:persona">Lennox</b>, <b epub:type="z3998:persona">Ross</b>, Lords, Ladies, and Attendants.</i>
+								<i epub:type="z3998:stage-direction">Sennet sounded. Enter <b epub:type="z3998:persona">Macbeth</b>, as king, <b epub:type="z3998:persona">Lady Macbeth</b>, as queen, <b epub:type="z3998:persona">Lennox</b>, <b epub:type="z3998:persona">Ross</b>, Lords, Ladies, and <b epub:type="z3998:persona">Attendants</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -163,7 +163,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Banquo</td>
-							<td>Ay, my good lord: our time does call upon “s.</td>
+							<td>Ay, my good lord: our time does call upon’s.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macbeth</td>
@@ -171,7 +171,9 @@
 								<p>
 									<span>I wish your horses swift and sure of foot;</span>
 									<br/>
-									<span>And so I do commend you to their backs. Farewell. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Banquo</b>.</i></span>
+									<span>And so I do commend you to their backs.</span>
+									<br/>
+									<span>Farewell. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Banquo</b>.</i></span>
 									<br/>
 									<span>Let every man be master of his time</span>
 									<br/>
@@ -179,7 +181,7 @@
 									<br/>
 									<span>The sweeter welcome, we will keep ourself</span>
 									<br/>
-									<span>Till supper-time alone: while then, God be with you! <i epub:type="z3998:stage-direction">Exeunt all but <b epub:type="z3998:persona">Macbeth</b>, and an attendant.</i></span>
+									<span>Till supper-time alone: while then, God be with you! <i epub:type="z3998:stage-direction">Exeunt all but <b epub:type="z3998:persona">Macbeth</b>, and an <b epub:type="z3998:persona">Attendant</b>.</i></span>
 									<br/>
 									<span>Sirrah, a word with you: attend those men</span>
 									<br/>
@@ -195,9 +197,7 @@
 							<td epub:type="z3998:persona">Macbeth</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Bring them before us. <i epub:type="z3998:stage-direction">Exit Attendant.</i></span>
-									<br/>
-									<span>To be thus is nothing;</span>
+									<span>Bring them before us. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Attendant</b>.</i> To be thus is nothing;</span>
 									<br/>
 									<span>But to be safely thus.⁠—Our fears in Banquo</span>
 									<br/>
@@ -229,7 +229,7 @@
 									<br/>
 									<span>Thence to be wrench’d with an unlineal hand,</span>
 									<br/>
-									<span>No son of mine succeeding. If “t be so,</span>
+									<span>No son of mine succeeding. If’t be so,</span>
 									<br/>
 									<span>For Banquo’s issue have I filed my mind;</span>
 									<br/>
@@ -243,7 +243,7 @@
 									<br/>
 									<span>To make them kings, the seed of Banquo kings!</span>
 									<br/>
-									<span>Rather than so, come fate into the list.</span>
+									<span>Rather than so, come fate into the list,</span>
 									<br/>
 									<span>And champion me to the utterance! Who’s there!</span>
 								</p>
@@ -252,13 +252,13 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter Attendant, with two <b epub:type="z3998:persona">Murderers</b>.</i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">Attendant</b>, with two <b epub:type="z3998:persona">Murderers</b>.</i>
 							</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Now go to the door, and stay there till we call. <i epub:type="z3998:stage-direction">Exit Attendant.</i></span>
+									<span>Now go to the door, and stay there till we call. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Attendant</b>.</i></span>
 									<br/>
 									<span>Was it not yesterday we spoke together?</span>
 								</p>
@@ -284,9 +284,7 @@
 									<br/>
 									<span>In our last conference, pass’d in probation with you,</span>
 									<br/>
-									<span>How you were borne in hand, how cross’d,</span>
-									<br/>
-									<span>the instruments,</span>
+									<span>How you were borne in hand, how cross’d, the instruments,</span>
 									<br/>
 									<span>Who wrought with them, and all things else that might</span>
 									<br/>
@@ -342,15 +340,15 @@
 									<br/>
 									<span>According to the gift which bounteous nature</span>
 									<br/>
-									<span>Hath in him closed; whereby he does receive</span>
+									<span>Hath in him closed, whereby he does receive</span>
 									<br/>
-									<span>Particular addition. from the bill</span>
+									<span>Particular addition, from the bill</span>
 									<br/>
 									<span>That writes them all alike: and so of men.</span>
 									<br/>
 									<span>Now, if you have a station in the file,</span>
 									<br/>
-									<span>Not i’ the worst rank of manhood, say “t;</span>
+									<span>Not i’ the worst rank of manhood, say’t;</span>
 									<br/>
 									<span>And I will put that business in your bosoms,</span>
 									<br/>
@@ -456,7 +454,7 @@
 									<br/>
 									<span>I will advise you where to plant yourselves;</span>
 									<br/>
-									<span>Acquaint you with the perfect spy o” the time,</span>
+									<span>Acquaint you with the perfect spy o’ the time,</span>
 									<br/>
 									<span>The moment on’t; for’t must be done to-night,</span>
 									<br/>
@@ -579,9 +577,7 @@
 									<br/>
 									<span>Remains in danger of her former tooth.</span>
 									<br/>
-									<span>But let the frame of things disjoint, both the</span>
-									<br/>
-									<span>worlds suffer,</span>
+									<span>But let the frame of things disjoint, both the worlds suffer,</span>
 									<br/>
 									<span>Ere we will eat our meal in fear and sleep</span>
 									<br/>
@@ -697,9 +693,9 @@
 									<br/>
 									<span>Good things of day begin to droop and drowse;</span>
 									<br/>
-									<span>While night’s black agents to their preys do rouse.</span>
+									<span>Whiles night’s black agents to their preys do rouse.</span>
 									<br/>
-									<span>Thou marvell’st at my words: but hold thee still;</span>
+									<span>Thou marvell’st at my words: but hold thee still:</span>
 									<br/>
 									<span>Things bad begun make strong themselves by ill.</span>
 									<br/>
@@ -820,13 +816,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">First Murderer</td>
-							<td>Let it come down.</td>
-						</tr>
-						<tr>
-							<td/>
-							<td>
-								<i epub:type="z3998:stage-direction">They set upon <b epub:type="z3998:persona">Banquo</b>.</i>
-							</td>
+							<td>Let it come down. <i epub:type="z3998:stage-direction">They set upon <b epub:type="z3998:persona">Banquo</b>.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Banquo</td>
@@ -844,7 +834,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">First Murderer</td>
-							<td>Wast not the way?</td>
+							<td>Was’t not the way?</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Third Murderer</td>
@@ -878,7 +868,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">A banquet prepared. Enter <b epub:type="z3998:persona">Macbeth</b>, <b epub:type="z3998:persona">Lady Macbeth</b>, <b epub:type="z3998:persona">Ross</b>, <b epub:type="z3998:persona">Lennox</b>, Lords, and Attendants.</i>
+								<i epub:type="z3998:stage-direction">A banquet prepared. Enter <b epub:type="z3998:persona">Macbeth</b>, <b epub:type="z3998:persona">Lady Macbeth</b>, <b epub:type="z3998:persona">Ross</b>, <b epub:type="z3998:persona">Lennox</b>, <b epub:type="z3998:persona">Lords</b>, and Attendants.</i>
 							</td>
 						</tr>
 						<tr>
@@ -935,9 +925,7 @@
 									<br/>
 									<span>Be large in mirth; anon we’ll drink a measure</span>
 									<br/>
-									<span>The table round. <i epub:type="z3998:stage-direction">Approaching the door.</i></span>
-									<br/>
-									<span>There’s blood on thy face.</span>
+									<span>The table round. <i epub:type="z3998:stage-direction">Approaching the door.</i> There’s blood on thy face.</span>
 								</p>
 							</td>
 						</tr>
@@ -977,7 +965,7 @@
 								<p>
 									<span>Most royal sir,</span>
 									<br/>
-									<span>Fleance is “scaped.</span>
+									<span>Fleance is ’scaped.</span>
 								</p>
 							</td>
 						</tr>
@@ -1057,13 +1045,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Lennox</td>
-							<td>May’t please your highness sit.</td>
-						</tr>
-						<tr>
-							<td/>
-							<td>
-								<i epub:type="z3998:stage-direction">The <b epub:type="z3998:persona">GHOST OF Banquo</b> enters, and sits in <b epub:type="z3998:persona">Macbeth’s</b> place.</i>
-							</td>
+							<td>May’t please your highness sit. <i epub:type="z3998:stage-direction">The <b epub:type="z3998:persona">Ghost of Banquo</b> enters, and sits in <b epub:type="z3998:persona">Macbeth’s</b> place.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macbeth</td>
@@ -1185,9 +1167,7 @@
 							<td epub:type="z3998:persona">Macbeth</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Prithee, see there! behold! look! lo!</span>
-									<br/>
-									<span>how say you?</span>
+									<span>Prithee, see there! behold! look! lo! how say you?</span>
 									<br/>
 									<span>Why, what care I? If thou canst nod, speak too.</span>
 									<br/>
@@ -1195,14 +1175,8 @@
 									<br/>
 									<span>Those that we bury back, our monuments</span>
 									<br/>
-									<span>Shall be the maws of kites.</span>
+									<span>Shall be the maws of kites. <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Ghost</b> vanishes.</i></span>
 								</p>
-							</td>
-						</tr>
-						<tr>
-							<td/>
-							<td>
-								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">GHOST OF Banquo</b> vanishes.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1221,7 +1195,7 @@
 							<td epub:type="z3998:persona">Macbeth</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Blood hath been shed ere now, i” the olden time,</span>
+									<span>Blood hath been shed ere now, i’ the olden time,</span>
 									<br/>
 									<span>Ere human statute purged the gentle weal;</span>
 									<br/>
@@ -1257,7 +1231,7 @@
 								<p>
 									<span>I do forget.</span>
 									<br/>
-									<span>Do not muse at me, my most worthy friends,</span>
+									<span>Do not muse at me, my most worthy friends;</span>
 									<br/>
 									<span>I have a strange infirmity, which is nothing</span>
 									<br/>
@@ -1282,7 +1256,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">GHOST OF Banquo</b>.</i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">Ghost</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1331,20 +1305,8 @@
 									<br/>
 									<span>The baby of a girl. Hence, horrible shadow!</span>
 									<br/>
-									<span>Unreal mockery, hence!</span>
-								</p>
-							</td>
-						</tr>
-						<tr>
-							<td/>
-							<td>
-								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">GHOST OF Banquo</b> vanishes.</i>
-							</td>
-						</tr>
-						<tr>
-							<td/>
-							<td epub:type="z3998:verse">
-								<p>
+									<span>Unreal mockery, hence! <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Ghost</b> vanishes.</i></span>
+									<br/>
 									<span>Why, so: being gone,</span>
 									<br/>
 									<span>I am a man again. Pray you, sit still.</span>
@@ -1377,7 +1339,7 @@
 									<br/>
 									<span>And keep the natural ruby of your cheeks,</span>
 									<br/>
-									<span>When mine is blanched with fear.</span>
+									<span>When mine is blanch’d with fear.</span>
 								</p>
 							</td>
 						</tr>
@@ -1574,11 +1536,11 @@
 									<br/>
 									<span>He shall spurn fate, scorn death, and bear</span>
 									<br/>
-									<span>He hopes “bove wisdom, grace and fear:</span>
+									<span>He hopes ’bove wisdom, grace and fear:</span>
 									<br/>
 									<span>And you all know, security</span>
 									<br/>
-									<span>Is mortals’ chiefest enemy. <i epub:type="z3998:stage-direction">Music and a song within: “Come away, come away,” <abbr>etc.</abbr></i></span>
+									<span>Is mortals’ chiefest enemy. <i epub:type="z3998:stage-direction">Music and a song within: “<em>Come away, come away,</em>” <abbr>etc.</abbr></i></span>
 									<br/>
 									<span>Hark! I am call’d; my little spirit, see,</span>
 									<br/>
@@ -1615,9 +1577,7 @@
 									<br/>
 									<span>Which can interpret further: only, I say,</span>
 									<br/>
-									<span>Things have been strangely borne. The</span>
-									<br/>
-									<span>gracious Duncan</span>
+									<span>Things have been strangely borne. The gracious Duncan</span>
 									<br/>
 									<span>Was pitied of Macbeth: marry, he was dead:</span>
 									<br/>
@@ -1649,13 +1609,11 @@
 									<br/>
 									<span>That had he Duncan’s sons under his key⁠—</span>
 									<br/>
-									<span>As, an’t please heaven, he shall not⁠—they</span>
-									<br/>
-									<span>should find</span>
+									<span>As, an’t please heaven, he shall not⁠—they should find</span>
 									<br/>
 									<span>What ’twere to kill a father; so should Fleance.</span>
 									<br/>
-									<span>But, peace! for from broad words and “cause he fail’d</span>
+									<span>But, peace! for from broad words and ’cause he fail’d</span>
 									<br/>
 									<span>His presence at the tyrant’s feast, I hear</span>
 									<br/>
@@ -1671,7 +1629,7 @@
 								<p>
 									<span>The son of Duncan,</span>
 									<br/>
-									<span>From whom this tyrant holds the due of birth</span>
+									<span>From whom this tyrant holds the due of birth,</span>
 									<br/>
 									<span>Lives in the English court, and is received</span>
 									<br/>
