--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -490,7 +490,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">A show of Eight Kings, the last with a glass in his hand; <b epub:type="z3998:persona">GHOST OF Banquo</b> following.</i>
+								<i epub:type="z3998:stage-direction">A show of Eight Kings, the last with a glass in his hand; <b epub:type="z3998:persona">Ghost of Banquo</b> following.</i>
 							</td>
 						</tr>
 						<tr>
