[Editorial] match text to Victoria (Act 4)

--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -79,7 +79,7 @@
 									<br/>
 									<span>Adder’s fork and blind-worm’s sting,</span>
 									<br/>
-									<span>Lizard’s leg and owlet’s wing,</span>
+									<span>Lizard’s leg and howlet’s wing,</span>
 									<br/>
 									<span>For a charm of powerful trouble,</span>
 									<br/>
@@ -113,7 +113,7 @@
 									<br/>
 									<span>Gall of goat, and slips of yew</span>
 									<br/>
-									<span>Silver’d in the moon’s eclipse,</span>
+									<span>Sliver’d in the moon’s eclipse,</span>
 									<br/>
 									<span>Nose of Turk and Tartar’s lips,</span>
 									<br/>
@@ -161,20 +161,14 @@
 								<p>
 									<span>O well done! I commend your pains;</span>
 									<br/>
-									<span>And every one shall share i’ the gains;</span>
+									<span>And every one shall share i’ the gains:</span>
 									<br/>
 									<span>And now about the cauldron sing,</span>
 									<br/>
 									<span>Live elves and fairies in a ring,</span>
 									<br/>
-									<span>Enchanting all that you put in. <i epub:type="z3998:stage-direction">Music and a song: “Black spirits,” <abbr>etc.</abbr></i></span>
+									<span>Enchanting all that you put in. <i epub:type="z3998:stage-direction">Music and a song: “<em>Black spirits,</em>” <abbr>etc.</abbr></i> <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Hecate</b> retires.</i></span>
 								</p>
-							</td>
-						</tr>
-						<tr>
-							<td/>
-							<td>
-								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Hecate</b> retires.</i>
 							</td>
 						</tr>
 						<tr>
@@ -184,11 +178,14 @@
 									<span>By the pricking of my thumbs,</span>
 									<br/>
 									<span>Something wicked this way comes.</span>
-									<br/>
-									<span>Open, locks,</span>
-									<br/>
-									<span>Whoever knocks!</span>
 								</p>
+								<blockquote>
+									<p>
+										<span>Open, locks,</span>
+										<br/>
+										<span>Whoever knocks!</span>
+									</p>
+								</blockquote>
 							</td>
 						</tr>
 						<tr>
@@ -427,7 +424,7 @@
 							<td epub:type="z3998:persona">Macbeth</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>That will never be</span>
+									<span>That will never be:</span>
 									<br/>
 									<span>Who can impress the forest, bid the tree</span>
 									<br/>
@@ -490,14 +487,14 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">A show of Eight Kings, the last with a glass in his hand; <b epub:type="z3998:persona">Ghost of Banquo</b> following.</i>
+								<i epub:type="z3998:stage-direction">A show of Eight Kings, the last with a glass in his hand; <b epub:type="z3998:persona">Banquo’s Ghost</b> following.</i>
 							</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macbeth</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Thou art too like the spirit of Banquo: down!</span>
+									<span>Thou art too like the spirit of Banquo; down!</span>
 									<br/>
 									<span>Thy crown does sear mine eye-balls. And thy hair,</span>
 									<br/>
@@ -539,18 +536,12 @@
 									<br/>
 									<span>I’ll charm the air to give a sound,</span>
 									<br/>
-									<span>While you perform your antic round:</span>
+									<span>While you perform your antic round;</span>
 									<br/>
 									<span>That this great king may kindly say,</span>
 									<br/>
-									<span>Our duties did his welcome pay.</span>
+									<span>Our duties did his welcome pay. <i epub:type="z3998:stage-direction">Music. The <b epub:type="z3998:persona">Witches</b> dance, and then vanish, with <b epub:type="z3998:persona">Hecate</b>.</i></span>
 								</p>
-							</td>
-						</tr>
-						<tr>
-							<td/>
-							<td>
-								<i epub:type="z3998:stage-direction">Music. The <b epub:type="z3998:persona">witches</b> dance and then vanish, with <b epub:type="z3998:persona">Hecate</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -629,7 +620,7 @@
 									<br/>
 									<span>The flighty purpose never is o’ertook</span>
 									<br/>
-									<span>Unless the deed go with it; from this moment</span>
+									<span>Unless the deed go with it: from this moment</span>
 									<br/>
 									<span>The very firstlings of my heart shall be</span>
 									<br/>
@@ -661,13 +652,13 @@
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">II</span>
 				</h3>
-				<p>Fife. Macduff’s castle.</p>
+				<p>Fife. <b epub:type="z3998:persona">Macduff’s</b> castle.</p>
 				<table>
 					<tbody>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Lady Macduff</b>, her Son, and <b epub:type="z3998:persona">Ross</b>.</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Lady Macduff</b>, her <b epub:type="z3998:persona">Son</b>, and <b epub:type="z3998:persona">Ross</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -734,9 +725,7 @@
 									<br/>
 									<span>He is noble, wise, judicious, and best knows</span>
 									<br/>
-									<span>The fits o’ the season. I dare not speak</span>
-									<br/>
-									<span>much further;</span>
+									<span>The fits o’ the season. I dare not speak much further;</span>
 									<br/>
 									<span>But cruel are the times, when we are traitors</span>
 									<br/>
@@ -778,7 +767,7 @@
 							<td epub:type="z3998:persona">Lady Macduff</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Sirrah, your father’s dead;</span>
+									<span>Sirrah, your father’s dead:</span>
 									<br/>
 									<span>And what will you do now? How will you live?</span>
 								</p>
@@ -818,7 +807,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Lady Macduff</td>
-							<td>Yes, he is dead; how wilt thou do for a father?</td>
+							<td>Yes, he is dead: how wilt thou do for a father?</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Son</td>
@@ -836,7 +825,7 @@
 							<td epub:type="z3998:persona">Lady Macduff</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Thou speak’st with all thy wit: and yet, i’ faith,</span>
+									<span>Thou speak’st with all thy wit; and yet, i’ faith,</span>
 									<br/>
 									<span>With wit enough for thee.</span>
 								</p>
@@ -988,7 +977,12 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">First Murderer</td>
-							<td>What, you egg! <i epub:type="z3998:stage-direction">Stabbing him.</i> Young fry of treachery!</td>
+							<td epub:type="z3998:verse">
+								<p>
+									<span>What, you egg! <i epub:type="z3998:stage-direction">Stabbing him.</i></span>
+									<br/>
+									<span>Young fry of treachery!</span>
+								</p>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Son</td>
@@ -996,14 +990,8 @@
 								<p>
 									<span>He has kill’d me, mother:</span>
 									<br/>
-									<span>Run away, I pray you! <i epub:type="z3998:stage-direction">Dies.</i></span>
+									<span>Run away, I pray you! <i epub:type="z3998:stage-direction">Dies.</i> <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Lady Macduff</b>, crying “<em>Murder!</em>” Exeunt <b epub:type="z3998:persona">Murderers</b>, following her.</i></span>
 								</p>
-							</td>
-						</tr>
-						<tr>
-							<td/>
-							<td>
-								<i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Lady Macduff</b>, crying “Murder!” Exeunt <b epub:type="z3998:persona">Murderers</b>, following her.</i>
 							</td>
 						</tr>
 					</tbody>
@@ -1067,11 +1055,9 @@
 									<br/>
 									<span>This tyrant, whose sole name blisters our tongues,</span>
 									<br/>
-									<span>Was once thought honest: you have loved him well.</span>
+									<span>Was once thought honest: you have loved him well:</span>
 									<br/>
-									<span>He hath not touch’d you yet. I am young;</span>
-									<br/>
-									<span>but something</span>
+									<span>He hath not touch’d you yet. I am young; but something</span>
 									<br/>
 									<span>You may deserve of him through me, and wisdom</span>
 									<br/>
@@ -1093,13 +1079,11 @@
 									<br/>
 									<span>A good and virtuous nature may recoil</span>
 									<br/>
-									<span>In an imperial charge. But I shall crave</span>
-									<br/>
-									<span>your pardon;</span>
+									<span>In an imperial charge. But I shall crave your pardon;</span>
 									<br/>
 									<span>That which you are my thoughts cannot transpose:</span>
 									<br/>
-									<span>Angels are bright still, though the brightest fell;</span>
+									<span>Angels are bright still, though the brightest fell:</span>
 									<br/>
 									<span>Though all things foul would wear the brows of grace,</span>
 									<br/>
@@ -1139,9 +1123,7 @@
 									<br/>
 									<span>Great tyranny! lay thou thy basis sure,</span>
 									<br/>
-									<span>For goodness dare not cheque thee: wear thou</span>
-									<br/>
-									<span>thy wrongs;</span>
+									<span>For goodness dare not cheque thee: wear thou thy wrongs;</span>
 									<br/>
 									<span>The title is affeer’d! Fare thee well, lord:</span>
 									<br/>
@@ -1263,7 +1245,7 @@
 									<br/>
 									<span>And yet seem cold, the time you may so hoodwink.</span>
 									<br/>
-									<span>We have willing dames enough: there cannot be</span>
+									<span>We have willing dames enough; there cannot be</span>
 									<br/>
 									<span>That vulture in you, to devour so many</span>
 									<br/>
@@ -1309,7 +1291,7 @@
 									<br/>
 									<span>The sword of our slain kings: yet do not fear;</span>
 									<br/>
-									<span>Scotland hath foisons to fill up your will.</span>
+									<span>Scotland hath foisons to fill up your will,</span>
 									<br/>
 									<span>Of your mere own: all these are portable,</span>
 									<br/>
@@ -1573,7 +1555,7 @@
 									<br/>
 									<span>Are made, not mark’d; where violent sorrow seems</span>
 									<br/>
-									<span>A modern ecstasy; the dead man’s knell</span>
+									<span>A modern ecstasy: the dead man’s knell</span>
 									<br/>
 									<span>Is there scarce ask’d for who; and good men’s lives</span>
 									<br/>
@@ -1867,7 +1849,7 @@
 									<br/>
 									<span>Bring thou this fiend of Scotland and myself;</span>
 									<br/>
-									<span>Within my sword’s length set him; if he “scape,</span>
+									<span>Within my sword’s length set him; if he ’scape,</span>
 									<br/>
 									<span>Heaven forgive him too!</span>
 								</p>
@@ -1881,7 +1863,7 @@
 									<br/>
 									<span>Come, go we to the king; our power is ready;</span>
 									<br/>
-									<span>Our lack is nothing but our leave; Macbeth</span>
+									<span>Our lack is nothing but our leave: Macbeth</span>
 									<br/>
 									<span>Is ripe for shaking, and the powers above</span>
 									<br/>
